--- a/src/mail/template/forgot-password-mail.html
+++ b/src/mail/template/forgot-password-mail.html
@@ -59,7 +59,7 @@
     <div class="content">
       <p>Mã OTP của bạn là</p>
       <p class="otp">{{otp}}</p>
-      <p>Mã OTP sẽ hết hạn trong 1 phút. Nếu mã OTP không hoạt động, vui lòng gửi lại mã khác</p>
+      <p>Mã OTP sẽ hết hạn trong 90 giây. Nếu mã OTP không hoạt động, vui lòng gửi lại mã khác</p>
       <p>Cảm ơn, <br>
       Vatta Toeic</p>
     </div>
